Added lessons about grid

--- a/html/miro-1/index.html
+++ b/html/miro-1/index.html
@@ -185,14 +185,17 @@
 
     </main>
     <footer>
-        <div class="copyright">@ 2024</div>
-        <nav>
-            <ul class="footer-menu">
-                <li><a href="#">Условия пользования</a></li>
-                <li><a href="#">Политика конфиденциальности</a></li>
-                <li><a href="#">Управление файлами cookies</a></li>
-            </ul>
-        </nav>
+        <div>
+            <div class="copyright">@ 2024</div>
+            <nav>
+                <ul class="footer-menu">
+                    <li><a href="#">Условия пользования</a></li>
+                    <li><a href="#">Политика конфиденциальности</a></li>
+                    <li><a href="#">Управление файлами cookies</a></li>
+                </ul>
+            </nav>
+        </div>
+
     </footer>
 
 </body>
